Removed styles.css and fixed resume text on mobile

--- a/css/5-responsive.css
+++ b/css/5-responsive.css
@@ -108,6 +108,7 @@
     }
     .resume-main-text {
       font-size: 2.2rem;
+      margin-left: 1rem;
     }
     .resume-sub, .resume-title {
       font-size: 1.1rem;
